--- a/env/Scripts/myblog/blog/templates/base.html
+++ b/env/Scripts/myblog/blog/templates/base.html
@@ -32,10 +32,10 @@
               <a class="nav-link" href="#">Aide</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Créer un Article</a>
+              <a class="nav-link" href="{% url 'open' %}">Créer un Article</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Modifier un Article</a>
+              <a class="nav-link" href="{% url 'edit' %}">Modifier un Article</a>
             </li>
             <li class="nav-item active ml-5">
                 <a class="nav-link btn btn-success" href="{% url 'login' %}">Connexion</a>
@@ -52,7 +52,7 @@
     {% endblock %}
 
     <footer class="bg-dark p-3">
-        <p class="text-center text-white">Un galerie ou application qui vous permet de vous guider ou de se renseigner dans les articles mondiaux. Plus d'info: ousmanearfangkemobodian@gmail.com</p>
+        <p class="text-center text-white">Je suis Ousmane Bodian le developpeur de cette page, Géolocalisation: Diamaguene Sicap Mbao Medina Marene2, Plus d'info: ousmanearfangkemobodian@gmail.com</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
