--- a/env/Scripts/myblog/blog/templates/login.html
+++ b/env/Scripts/myblog/blog/templates/login.html
@@ -23,7 +23,7 @@
               </form>
             </div>
         <div class="col-lg-6">
-            <img src="https://d2poqm5pskresc.cloudfront.net/wp-content/uploads/2019/10/contact-us.jpg" alt="" class="img-fluid img-reponsive">
+            <img src="https://thumbs.dreamstime.com/b/vieux-livre-avec-lettres-volantes-et-lumi%C3%A8re-magique-sur-le-fond-de-la-biblioth%C3%A8que-livres-anciens-comme-symbole-218640948.jpg" alt="" class="img-fluid img-reponsive">
 
         </div>
     </div>
