--- a/env/Scripts/myblog/blog/templates/register.html
+++ b/env/Scripts/myblog/blog/templates/register.html
@@ -7,15 +7,15 @@
             <h3>Créer votre compte</h3>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputText1">Donnez votre Prénom:</label>
+                    <label for="exampleInputText1">Prénom:</label>
                     <input type="text" class="form-control" id="exampleInputText1" aria-describedby="textHelp">
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputText1">Donnez votre Nom:</label>
+                    <label for="exampleInputText1">Nom:</label>
                     <input type="text" class="form-control" id="exampleInputText1" aria-describedby="textHelp">
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Votre Email:</label>
+                    <label for="exampleInputEmail1">Email:</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                   </div>
                   <div class="form-group">
@@ -34,7 +34,7 @@
               </form>
             </div>
         <div class="col-lg-6">
-            <img src="https://montagne-noire-labruguiere.mon-ent-occitanie.fr/lectureFichiergw.do?ID_FICHIER=1490115564349" alt="" class="img-fluid img-reponsive">
+            <img src="https://img.freepik.com/vecteurs-libre/pile-livres-design-plat-dessines-main_23-2149331952.jpg?w=2000" alt="" class="img-fluid img-reponsive">
 
         </div>
     </div>
